--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       <div class="row">
         <button class="btn" id="clear">Clear</button>
         <button class="btn primary" id="generate">Generate JSON</button>
+        <button class="btn primary" id="submit-to-github">Submit to GitHub</button>
       </div>
     </header>
 
